{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "d0565f22-0554-4d31-a250-bef2a6c08c3b",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "83469a6c-77b3-45e3-9f85-95b16f753cb3",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "5d1abd41-4276-4892-bd91-349e81f4c7de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPossition",
                    "type": "PassThrough",
                    "id": "7ddc5784-dcb7-466f-9ad1-f8ac61d33396",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66f6a273-8308-4b0f-9064-81d4d0bb2cb5",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cb7a2c8-0870-44b4-b2e7-a9aa5d50bf43",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1aebfd0-78c1-41ed-af1d-e16598f0332c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPossition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}